[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/Game.gd" type="Script" id=1]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_Screen" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Game_Screen"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="ColorRect" parent="GUI/Game_Screen/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.239216, 0.184314, 0.619608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="ColorRect" parent="GUI/Game_Screen/VBoxContainer"]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.717647, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top_button" type="Button" parent="GUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 30.0
margin_right = 100.0
margin_bottom = 100.0
disabled = true
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom_button" type="Button" parent="GUI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = -30.0
disabled = true
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_timer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="pressed" from="GUI/Top_button" to="." method="_on_Button_top_pressed"]
[connection signal="pressed" from="GUI/Bottom_button" to="." method="_on_Button_bottom_pressed"]
[connection signal="timeout" from="Button_timer" to="." method="_on_Button_timer_timeout"]
